# rustris

./: .gitignore  Cargo.toml  README.md  compile.sh  dockerfile
src/: gamecore.rs  main.rs  render.rs  state.rs
src/gamecore/: game_grid.rs  masks.rs  tetrominos.rs  tetronimos.rs
src/render/: background_rendering.rs  block_rendering.rs  buttons.rs  game_over.rs  gamegrid_rendering.rs  score_rendering.rs  window.rs
src/state/: gamegrid_manager.rs
